# earth-age-calculator

./: README.md  pyproject.toml
src/earth_age_calculator/: earth.py
tests/: test_earth.py
