[project]
name = "earth-age-calculator"
version = "0.1.0"
description = "I'll calculate the age of the earth."
authors = [
    {name = "dmario24", email = "data.mario24@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm.dev-dependencies]
test = ["pytest", "pytest-cov"]
